--- a/build.gradle
+++ b/build.gradle
@@ -9,15 +9,27 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    alias(libs.plugins.spring.boot)
+    alias(libs.plugins.spring.depmgmt)
     id 'io.freefair.lombok' version '8.6'
+    id 'maven-publish'
 }
 
-apply plugin: 'io.spring.dependency-management'
+
+group = 'in.co.rahogata'
+version = '0.1.0'
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+}
+
+dependencyManagement {
+    imports {
+        mavenBom 'org.springframework.boot:spring-boot-dependencies:2.5.15'
+    }
+generatedPomCustomization {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -35,4 +47,12 @@ java {
 
 test {
     useJUnitPlatform()
+}
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            artifact jar
+        }
+    }
 }
