--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,11 @@
 [versions]
 commons-math3 = "3.6.1"
 guava = "32.1.3-jre"
-spring-boot-plugin = '2.5.15'
+spring-depmgmt = '1.1.5'
 
 [libraries]
 commons-math3 = { module = "org.apache.commons:commons-math3", version.ref = "commons-math3" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 
 [plugins]
-spring-boot = { id = 'org.springframework.boot', version.ref = 'spring-boot-plugin'}
+spring-depmgmt = { id = 'io.spring.dependency-management', version.ref = 'spring-depmgmt'}
