--- a/build.gradle
+++ b/build.gradle
@@ -41,8 +41,11 @@ dependencies {
 
 // Apply a specific Java toolchain to ease working on different environments.
 java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(JavaVersion.VERSION_1_8.getMajorVersion())
+    }
 }
 
 test {
