--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,9 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    alias(libs.plugins.spring.depmgmt)
     id 'io.freefair.lombok' version '8.6'
     id 'maven-publish'
 }
-
 
 group = 'in.co.rahogata'
 version = '0.1.0'
@@ -23,17 +21,9 @@ repositories {
     mavenCentral()
 }
 
-dependencyManagement {
-    imports {
-        mavenBom 'org.springframework.boot:spring-boot-dependencies:2.5.15'
-    }
-generatedPomCustomization {
-        enabled = true
-    }
-}
-
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation platform('org.springframework.boot:spring-boot-dependencies:2.5.15')
+    api 'org.springframework.boot:spring-boot-starter-data-redis'
     compileOnly 'org.apache.commons:commons-pool2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test',
     'com.github.codemonstur:embedded-redis:1.4.3'
@@ -54,8 +44,8 @@ test {
 
 publishing {
     publications {
-        mavenJava(MavenPublication) {
-            artifact jar
+        maven(MavenPublication) {
+            from components.java
         }
     }
 }
