--- a/redis/tls/openssl.cnf
+++ b/redis/tls/openssl.cnf
@@ -1,6 +1,10 @@
+[alt_names]
+DNS.1 = localhost
+IP.1 = 127.0.0.1
 [ server_cert ]
 keyUsage = digitalSignature, keyEncipherment
 nsCertType = server
+subjectAltName = @alt_names
 [ client_cert ]
 keyUsage = digitalSignature, keyEncipherment
 nsCertType = client
