--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@
 [versions]
 commons-math3 = "3.6.1"
 guava = "32.1.3-jre"
+lombok = '1.18.34'
 
 [libraries]
 commons-math3 = { module = "org.apache.commons:commons-math3", version.ref = "commons-math3" }
