--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ plugins {
 }
 
 group = 'in.co.rahogata'
-version = '0.1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
     // Use Maven Central for resolving dependencies.
