--- a/build.gradle
+++ b/build.gradle
@@ -84,8 +84,8 @@ lombok {
 nexusPublishing {
     repositories {
         sonatype {
-            nexusUrl = uri('https://s01.oss.sonatype.org/service/local')
-            snapshotRepositoryUrl = uri('https://s01.oss.sonatype.org/content/repositories/snapshots')
+            nexusUrl = uri('https://s01.oss.sonatype.org/service/local/')
+            snapshotRepositoryUrl = uri('https://s01.oss.sonatype.org/content/repositories/snapshots/')
         }
     }
 }
