local sonarqube integration.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
 # Ignore Gradle project-specific cache directory
-.gradle
+.gradle/
 
 # Ignore Gradle build output directory
-build
+build/
+
+# Eclipse project files
+bin/
+.classpath
+.project
+.settings/
