--- a/gradle.properties
+++ b/gradle.properties
@@ -9,3 +9,6 @@ sonatypePassword =
 signing.keyId =
 signing.password =
 signing.secretKeyRingFile =
+
+systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.token=squ_78cedeed0fbca9596401c5a45f8563a1a1b3ce90
